--- a/css/index.css
+++ b/css/index.css
@@ -287,8 +287,8 @@ body {
 }
 
 .slide4{
-    background: url(../img/back_grad.jpg) no-repeat;
-    background-size: cover;
+    background: rgb(33,27,25);
+    background: linear-gradient(90deg, rgba(33,27,25,1) 0%, rgba(78,52,39,1) 100%);
 }
 
 .slide4-wrapper{
@@ -421,6 +421,14 @@ body {
     .slide2__block{
         width: 250px;
     }
+
+    .slide3__img_1{
+        right: 140px;
+    }
+
+    .slide3__img_2{
+        left: 140px;
+    }
 }
 
 @media (max-width: 1050px) {
@@ -447,6 +455,14 @@ body {
 
     .slide2__block__text__p{
         display: none;
+    }
+
+    .slide3__img_1, .slide3__img_2 {
+        display: none;
+    }
+
+    .slide3__img_3 {
+        position: relative;
     }
 
 }
@@ -496,6 +512,31 @@ body {
     .slide2__block__text__p{
         display: block;
     }
+
+    .slide3__text{
+        width: 578px;
+     }
+
+    .slide3__img {
+        height: 340px;
+    }
+
+    .slide3__img_3 {
+        background-size: cover;
+        height: 340px;
+        width: 578px;
+    }
+
+    .slide4-wrapper{
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .slide4__button{
+        display: none;
+    }
 }
 
 @media (max-width: 630px) {
@@ -542,10 +583,6 @@ body {
         justify-content: space-around;
     }
 
-    .slide2__block{
-        /*width: 300px;*/
-    }
-
     .slide2__block__img{
         height: 60px;
         width: 60px;
@@ -558,6 +595,56 @@ body {
     .slide2__block__text__p{
         display: block;
         font-size: 15px;
+    }
+
+    .slide3__text{
+        width: 420px;
+    }
+
+    .slide3__text__h3{
+        font-size: 25px;
+    }
+
+    .slide3__text__p{
+        display: none;
+    }
+
+    .slide3__img {
+        height: 200px;
+        width: 340px;
+    }
+
+    .slide3__img_3{
+        height: 200px;
+        width: 340px;
+        position: absolute;
+    }
+
+    .slide3__img_1, .slide3__img_2{
+        display: block;
+    }
+
+    .slide3__img_1{
+        position: relative;
+        background-size: cover;
+        width: 340px;
+        height: 180px;
+        right: 35px;
+    }
+
+    .slide3__img_2{
+        position: absolute;
+        background-size: cover;
+        width: 340px;
+        height: 180px;
+        left:35px;
+    }
+
+    .slide4__text__h3{
+        text-align: center;
+    }
+    .slide4__text__p{
+        display: none;
     }
 }
 
@@ -623,6 +710,14 @@ body {
     .slide2__block__text__h3{
         font-size: 22px;
     }
+
+    .slide3__img{
+        height: 300px;
+    }
+
+    /*.slide3__text__h3{*/
+    /*    font*/
+    /*}*/
 }
 
 @media (max-width: 350px) {
