--- a/css/index.css
+++ b/css/index.css
@@ -658,6 +658,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    width: 100%;
 }
 
 .slide8__block{
@@ -852,6 +853,10 @@ body {
     .slide5-wrapper{
         width: 800px;
     }
+
+    .slide7__ul{
+        display:none;
+    }
 }
 
 @media (max-width: 850px) {
@@ -964,6 +969,9 @@ body {
         display: none;
     }
 
+    .slide7__text{
+        margin-bottom: 0;
+    }
 }
 
 @media (max-width: 630px) {
@@ -1092,6 +1100,11 @@ body {
 
     .slide5__text{
         width: 420px;
+    }
+
+    .slide7-wrapper{
+        display: flex;
+        flex-direction: column;
     }
 }
 
