--- a/css/index.css
+++ b/css/index.css
@@ -269,6 +269,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 22px;
+    color: #555;
 }
 
 .slide2__block__text__p {
@@ -283,7 +284,7 @@ body {
     display: block;
     width: 80px;
     height: 2px;
-    background-color: #000;
+    background-color: #f1eee9;
     bottom: -15px;
     left: calc(50% - 40px);
 }
@@ -362,6 +363,7 @@ body {
 
 .slide4-wrapper {
     height: 150px;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -450,8 +452,9 @@ body {
 .slide5__text__p{
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
-    margin-top: 10px;
+    margin-top: 30px;
     font-size: 16px;
+    color: #9b9b9b;
 }
 
 .slide5__nav {
@@ -473,6 +476,7 @@ body {
     min-width: 70px;
     text-align: center;
     outline: none;
+    color: #8c8c8c;
 }
 
 .slide5__nav__button:hover{
@@ -969,8 +973,30 @@ body {
         display: none;
     }
 
+    .slide7-wrapper{
+        margin: 0;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        width: 578px;
+    }
+
     .slide7__text{
+        margin-top: 20px;
         margin-bottom: 0;
+        text-align: center;
+    }
+
+    .slide8-wrapper{
+        padding-top: 20px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .slide8__block{
+        margin: 30px 0;
     }
 }
 
@@ -1104,8 +1130,15 @@ body {
 
     .slide7-wrapper{
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
+
+    .slide7__img{
+        width: 90%;
+        height: 90%;
+    }
+
+
 }
 
 @media (max-width: 420px) {
@@ -1158,9 +1191,14 @@ body {
         font-size: 40px;
     }
 
+    .slide-wrapper{
+        max-width: 320px;
+    }
+
     .slide2-wrapper{
         max-width: 320px;
     }
+
     .slide2__block__img{
         height: 45px;
         width: 45px;
@@ -1249,6 +1287,10 @@ body {
         width: inherit;
     }
 
+    .slide-wrapper{
+        max-width: 320px;
+    }
+
     .slide3__text{
         width: 320px;
     }
@@ -1281,7 +1323,6 @@ body {
     .slide5__pic__text{
         width: 285px;
     }
-
 
 
 }
